-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
None
-
-
c1d5e46ea (dev), 2ee61d7da (6.6), c8276e977 (6.5)
-
2023wk30FOQtforAndroid, 2023wk32FOQtforAndroid, 2023wk34FOQtforAndroid, 2023wk38FOQtforAndroid
QML TextEdit and TextArea text selection works incorrect on Android.
1) PressAndHold on word
2) Release
Result: text lost selection and cursor stay on release point(look video attachment).
But if you double press and hold(e.g. Press->Release->PressAndHold->Release) all works fine.
On iOS and other platforms works fine.
- relates to
-
QTBUG-119229 Missing text selection behavior with Virtual Keyboard plugin on touch screens
-
- Open
-
-
QTBUG-116606 unable to deselect text in text input using touch
-
- Closed
-
- resulted from
-
QTBUG-101205 Make TextInput and TextEdit behave correctly by default with regards to text selection
-
- Closed
-
- mentioned in
-
Page Loading...